@@ -2,7 +2,10 @@ package application;
 	
 import java.awt.Dimension;
 import java.awt.Toolkit;
+
+import javafx.animation.TranslateTransition;
 import javafx.application.Application;
+import javafx.fxml.Initializable;
 import javafx.stage.Stage;
 import javafx.scene.Group;
 import javafx.scene.Scene;
@@ -22,7 +25,7 @@ public class Window extends Application {
 			scene.getStylesheets().add(getClass().getResource("application.css").toExternalForm());
 		    
 			primaryStage.setScene(scene);
-			primaryStage.setFullScreen(true);
+			primaryStage.setFullScreen(false);
 			primaryStage.setResizable(false);
 			primaryStage.show();
 		} catch(Exception e) {
@@ -34,7 +37,7 @@ public class Window extends Application {
 	}
 	
 	public static void main(String[] args) {
-		//--module-path C:\Users\lucpr\Downloads\openjfx-20_windows-x64_bin-sdk\javafx-sdk-20\lib --add-modules=javafx.controls,javafx.fxml
+
 		launch(args);
 	}
 	
@@ -49,6 +52,7 @@ public class Window extends Application {
 	public static Window get() {
 		return Window.window;
 	}
+
 }
 
 
